Make various improvements